Reads encrypted git password from agent.properties.
With this change you can put three properties into your agent.properties
file and never need to provide basic auth user/pass:

user={your username}
pass={encrypted password}
master={secret needed by jasypt}

Uses jasypt BasicTextEncryptor to decrypt the password.
Create the password by using the jasypt.

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>usn.otm</groupId>
 	<artifactId>cac-agent</artifactId>
@@ -38,6 +39,11 @@
 			<artifactId>org.eclipse.jgit.pgm</artifactId>
 			<version>4.8.0.201706111038-r</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -55,7 +61,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-		        <version>2.4</version>
+				<version>2.4</version>
 				<configuration>
 					<archive>
 						<manifestEntries>
