--- a/example-agent.properties
+++ b/example-agent.properties
@@ -1,5 +1,5 @@
 # Your git username
-user: apastel
+user: john.doe
 
 # Name of the cert you want selected by default without being prompted
 default.cert.name: CAC ID Certificate
