* Moved JgitCac to org.eclipse.jgit.pgm, so it can override package-protected methods * Updated credentials mechanism to work the same way for both "git clone" and "git fetch" * Fixed a bug in user/pass handling that was breaking "git fetch" * Added support for using a non-encrypted password * Added "--cac-agent-encrypt" command for generating an encrypted password * Added documentation for storing username/password

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Premain-Class>com.moesol.url.CacHookingAgent</Premain-Class>
+							<Premain-Class>org.eclipse.jgit.pgm.CacHookingAgent</Premain-Class>
 							<Can-Redefine-Classes>false</Can-Redefine-Classes>
 							<Can-Retransform-Classes>false</Can-Retransform-Classes>
 							<Git-Commit-Id>${mvngit.commit.id}</Git-Commit-Id>
@@ -92,7 +92,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>com.moesol.jgit.JgitCac</mainClass>
+							<mainClass>org.eclipse.jgit.pgm.JgitCac</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
