--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.8.0</version>
 				<configuration>
-					<source>1.9</source>
-					<target>1.9</target>
+					<release>9</release>
 				</configuration>
 			</plugin>
 
