--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,19 +18,22 @@ jobs:
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v2-dependencies-{{ checksum "pom.xml" }}
-          # fallback to using the latest cache if no exact match is found
-          - v2-dependencies-
-
-      - run: mvn dependency:go-offline
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v2-dependencies-{{ checksum "pom.xml" }}
+# Disabled caching. "dependency:go-offline" doesn't seem to work
+# with dependencies between modules being built.
+#
+#      # Download and cache dependencies
+#      - restore_cache:
+#          keys:
+#          - v2-dependencies-{{ checksum "pom.xml" }}
+#          # fallback to using the latest cache if no exact match is found
+#          - v2-dependencies-
+#
+#      - run: mvn dependency:go-offline
+#
+#      - save_cache:
+#          paths:
+#            - ~/.m2
+#          key: v2-dependencies-{{ checksum "pom.xml" }}
 
       - run:
           name: Save test results
