--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,40 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+
+		<!--
+			The server entry in settings.xml containing the credentials 
+			to use with when pushing maven artifacts to github
+			(com.github.github:site-maven-plugin below).
+		-->
+		<github.global.server>github</github.global.server>
+
+		<!-- Convenience variables -->
+		<github-owner>MoebiusSolutions</github-owner>
+		<github-repo>cac-agent</github-repo>
+		<temp-mvn-repo>${project.build.directory}/mvn-repo</temp-mvn-repo>
 	</properties>
 
 	<scm>
-		<connection>scm:git:https://github.com/MoebiusSolutions/cac-agent.git</connection>
-		<developerConnection>scm:git:https://github.com/MoebiusSolutions/cac-agent.git</developerConnection>
-		<tag>HEAD</tag>
+		<connection>scm:git:git@github.com:${github-owner}/${github-repo}.git</connection>
+		<developerConnection>scm:git:git@github.com:${github-owner}/${github-repo}.git</developerConnection>
+		<url>https://github.com/${github-owner}/${github-repo}/tree/${project.scm.tag}</url>
+		<tag>master</tag>
 	</scm>
+
+	<distributionManagement>
+		<!--
+			A filesystem repo stored in the target directory
+		
+			By letting maven deploy here, we can follow-up with the github plugin
+			to upload the artifacts. (GitHub doens't support the Maven deploy protocol.)
+		 --> 
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${temp-mvn-repo}</url>
+		</repository>
+	</distributionManagement>
 
 	<dependencyManagement>
 		<dependencies>
@@ -66,8 +93,17 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.2</version>
+				<version>2.5.3</version>
+				<configuration>
+					<!-- Specify a custom release tag naming convention -->
+					<tagNameFormat>cac-agent-@{project.version}</tagNameFormat>
+				</configuration>
 				<dependencies>
+					<!--
+						Force a version of maven-scm-provider-gitexe that actually works correctly (committing to git).
+						
+						See: https://stackoverflow.com/a/20657721
+					 -->
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
 						<artifactId>maven-scm-provider-gitexe</artifactId>
@@ -83,6 +119,67 @@
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
 			</plugin>
+
+			<!-- Redirect "deploy" to a temporary, local directory -->
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<!-- 
+						Deploy sites files (jars for maven) to a directory on disk
+						
+						NOTE: We're writing releases and snapshots to different directories,
+						then including only releases in the github plugin config that follows. This prevents
+						snapshots from ending up in the github repo.
+					-->
+					<altReleaseDeploymentRepository>internal.repo::default::file://${temp-mvn-repo}/releases</altReleaseDeploymentRepository>
+					<altSnapshotDeploymentRepository>internal.repo::default::file://${temp-mvn-repo}/snapshots</altSnapshotDeploymentRepository>
+				</configuration>
+			</plugin>
+
+			<!-- Upload local/temporary maven repo files to github -->
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.12</version>
+				<configuration>
+					<!-- Merge new artifacts with existing repo (always true if we're pushing to a maven repo) -->
+					<merge>true</merge>
+					<!-- Git commit message -->
+					<message>Maven artifacts for ${project.artifactId}-${project.version}</message>
+					<!-- Disable webpage processing -->
+					<noJekyll>true</noJekyll>
+					<!--
+						Local directory to read from
+
+						NOTE: We only publish releases in this example.
+						Snapshots will fail with error if attempted.
+					-->
+					<outputDirectory>${temp-mvn-repo}/releases</outputDirectory>
+					<!-- Remote branch name to publish to -->
+					<branch>refs/heads/master</branch>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<!-- GitHub repo owner -->
+					<repositoryOwner>${github-owner}</repositoryOwner>
+					<!-- GitHub repo name for maven artifacts -->
+					<repositoryName>${github-repo}.mvn</repositoryName>
+				</configuration>
+				<executions>
+					<!--
+						Apply the site-maven-plugin's "site" goal to the
+						build's "deploy" phase
+					-->
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
