--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
+      # The moebius image is circleci + and second JDK
       - image: moebiussolutions/cac-agent.docker.circleci
       
     working_directory: ~/repo
