[maven-release-plugin] prepare release cac-agent-1.13

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.MoebiusSolutions</groupId>
 	<artifactId>cac-agent-parent</artifactId>
-	<version>1.13-SNAPSHOT</version>
+	<version>1.13</version>
 	<packaging>pom</packaging>
 	<name>cac-agent-parent</name>
 	<description>Root POM for cac-agent</description>
@@ -41,7 +41,7 @@
 		<connection>scm:git:git@github.com:${github-owner}/${github-repo}.git</connection>
 		<developerConnection>scm:git:git@github.com:${github-owner}/${github-repo}.git</developerConnection>
 		<url>https://github.com/${github-owner}/${github-repo}/tree/${project.scm.tag}</url>
-		<tag>master</tag>
+		<tag>cac-agent-1.13</tag>
 	</scm>
 
 	<distributionManagement>
