--- a/cac-agent-jdk-11/pom.xml
+++ b/cac-agent-jdk-11/pom.xml
@@ -28,11 +28,21 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<artifactId>maven-toolchains-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>toolchain</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
-					<verbose>true</verbose>
-					<fork>true</fork>
-					<executable>${JDK_11_HOME}/bin/javac</executable>
+					<toolchains>
+						<jdk>
+							<version>11</version>
+							<vendor>openjdk</vendor>
+						</jdk>
+					</toolchains>
 				</configuration>
 			</plugin>
 		</plugins>
