--- a/cac-jgit/pom.xml
+++ b/cac-jgit/pom.xml
@@ -28,7 +28,6 @@
 			<!-- Build an uber-jar -->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<id>make-assembly</id>
@@ -50,6 +49,9 @@
 								<manifest>
 									<mainClass>org.eclipse.jgit.pgm.JgitCac</mainClass>
 								</manifest>
+								<manifestEntries>
+									<Multi-Release>true</Multi-Release>
+								</manifestEntries>
 							</archive>
 						</configuration>
 					</execution>
