--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,6 @@
 		<build.number>0</build.number>
 
 		<!--
-			You must specify JDK 8 and 11 binaries paths to build in ~/.m2/toolchains.xml
-		-->
-
-		<!--
 			The server entry in settings.xml containing the credentials 
 			to use with when pushing maven artifacts to github
 			(com.github.github:site-maven-plugin below).
@@ -86,41 +82,38 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
+					<version>3.12.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-toolchains-plugin</artifactId>
-					<version>1.1</version>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.3.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>3.0.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.2.5</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>3.1.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>3.6.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-toolchains-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>toolchain</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<!-- default toolchain unless overriden -->
-					<toolchains>
-						<jdk>
-							<version>8</version>
-							<vendor>openjdk</vendor>
-						</jdk>
-					</toolchains>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
 				<configuration>
 					<archive>
 						<manifestEntries>
@@ -134,7 +127,6 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
 				<configuration>
 					<!-- Specify a custom release tag naming convention -->
 					<tagNameFormat>cac-agent-@{project.version}</tagNameFormat>
@@ -153,9 +145,7 @@
 				</dependencies>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1</version>
 				<configuration>
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
@@ -164,7 +154,6 @@
 			<!-- Redirect "deploy" to a temporary, local directory -->
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.1</version>
 				<configuration>
 					<!-- 
 						Deploy sites files (jars for maven) to a directory on disk
@@ -225,9 +214,6 @@
 	</build>
 
 	<modules>
-		<module>cac-agent-jdk-interface</module>
-		<module>cac-agent-jdk-8</module>
-		<module>cac-agent-jdk-11</module>
 		<module>cac-agent</module>
 		<module>cac-jgit</module>
 		<module>cac-ssl-relay</module>
@@ -240,7 +226,6 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-assembly-plugin</artifactId>
-						<version>3.0.0</version>
 						<configuration>
 							<skip>true</skip>
 						</configuration>
