Add socks5 support to ssl-relay
Note that the URL needs to be http, since
the ssl-relay adds the tls wrapper.

--- a/cac-ssl-relay/pom.xml
+++ b/cac-ssl-relay/pom.xml
@@ -21,6 +21,11 @@
 			<groupId>org.jasypt</groupId>
 			<artifactId>jasypt</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
