--- a/cac-agent/pom.xml
+++ b/cac-agent/pom.xml
@@ -41,8 +41,9 @@
 							<goal>compile</goal>
 						</goals>
 						<configuration>
-							<source>1.8</source>
-							<target>1.8</target>
+							<release>8</release>
+							<source>8</source>
+							<target>8</target>
 						</configuration>
 					</execution>
 					<execution>
